`vgvi()` support for LINESTRING features. Working on #9

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(
 # CGEI
 
 <!-- badges: start -->
+
 [![R-CMD-check](https://github.com/STBrinkmann/CGEI/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/STBrinkmann/CGEI/actions/workflows/R-CMD-check.yaml)
+
 <!-- badges: end -->
 
 The goal of CGEI is to ...
@@ -84,10 +86,34 @@ observer <- st_sf(sf_point(c(492243.3, 5454231.4)), crs = st_crs(26910))
 
 Calculate the VGVI for a 200 meters radius around the observers position at 1.7 meters height (eye level).
 
-```{r message=FALSE, warning=FALSE, fig.height=5, fig.width=10}
+```{r message=FALSE, warning=FALSE}
 library(CGEI)
-vs <- vgvi(observers = observer, 
-           dsm_rast = DSM, dtm_rast = DEM, greenspace_rast = GreenSpace, 
-           max_distance = 200, observer_height = 1.7)
-print(vs)
+vgvi_sf <- vgvi(observers = observer, 
+                dsm_rast = DSM, dtm_rast = DEM, greenspace_rast = GreenSpace, 
+                max_distance = 200, observer_height = 1.7, mode = "exponential")
+vgvi_sf$VGVI
 ```
+
+The output of \~0.67 indicates, that \~67% of the visible area, within a 200 meters radius, is covered by greenspace.
+
+### 2. Road Network
+
+We also provide sample data of a SF LINESTRING feature, representing a road network. This feature represents roads and paths, that can be reached by walking within 5 minutes from our observer location.
+
+```{r message=FALSE, warning=FALSE}
+# Download line feature and load as sf object
+isodistance <- read_sf("https://github.com/STBrinkmann/data/raw/main/GVI_Data/isoline.gpkg")
+```
+
+Compute the VGVI along the line feature. As the resolution of our DSM is 5 meters, points along the line feature will be generated every 5 meters, too.
+
+```{r eval=FALSE, fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
+vgvi_sf <- vgvi(observers = isodistance, 
+                dsm_rast = DSM, dtm_rast = DEM, greenspace_rast = GreenSpace, 
+                max_distance = 200, observer_height = 1.7, 
+                m = 1, b = 3, mode = "exponential", cores = 12)
+
+hist(vgvi_sf$VGVI)
+```
+
+![](docs/VGVI_histogram.png)
