--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,6 @@ The goal of CGEI is to ...
 ### Data
 
 For the first two examples we will use a [Digital Elevation Model (DEM)](https://opendata.vancouver.ca/explore/dataset/digital-elevation-model), a binary Greenspace Mask based on a [land cover classification](http://www.metrovancouver.org/data) and a Digital Surface Model (DSM). The DSM is generated from [LiDAR data collected in 2013](https://opendata.vancouver.ca/explore/dataset/lidar-2013/). A detailed explanation on how the DSM has been generated using R is provided in [this](https://geobrinkmann.com/post/visible-greenness-exposure/) tutorial. To reduce the size of the R package, the sample data has been uploaded to a separate GitHub repository and needs to be downloaded first.
-
 ```{r message=FALSE, warning=FALSE}
 # Download DEM
 DEM_tmp <- tempfile(fileext = ".tif")
@@ -63,54 +62,103 @@ download.file(url = "https://github.com/STBrinkmann/data/raw/main/GVI_Data/GVI_D
 GS_tmp <- tempfile(fileext = ".tif")
 download.file(url = "https://github.com/STBrinkmann/data/raw/main/GVI_Data/GVI_GreenSpace.tif",
               destfile = GS_tmp, mode="wb")
+
+# Download hoechstetter
+hoechstetter_tmp <- tempfile(fileext = ".tif")
+download.file(url = "https://github.com/STBrinkmann/data/raw/main/GVI_Data/hoechstetter.tif",
+              destfile = hoechstetter_tmp, mode="wb")
 ```
-
-Load DSM, DEM and Greenspace Mask, and generate the observer location as a `sf` `POINT` feature.
-
 ```{r message=FALSE, warning=FALSE}
 # Load libraries. if one is not installed, use the "install.packages()" function
 library(terra)
 library(sf)
 library(sfheaders)
+library(CGEI)
 
 # Load raster objects
 GreenSpace <- rast(GS_tmp)
 DEM <- rast(DEM_tmp)
 DSM <- rast(DSM_tmp)
-
-# Generate single observer point
-observer <- st_sf(sf_point(c(492243.3, 5454231.4)), crs = st_crs(26910))
+hoechstetter <- rast(hoechstetter_tmp)
 ```
 
-### 1. Single Point
+### Viewshed Greenness Visibility Index (VGVI)
 
-Calculate the VGVI for a 200 meters radius around the observers position at 1.7 meters height (eye level).
+The VGVI expresses the proportion of visible greenness to the total visible area based on a viewshed. The estimated VGVI values range between 0 and 1, where 0 = no green cells are visible, and 1 = all of the visible cells are green.
 
+Based on a viewshed and a binary greenspace raster, all visible points are classified as visible green and visible no-green. All values are summarized using a decay function, to account for the reducing visual prominence of an object in space with increasing distance from the observer. Currently two options are supported, a logistic and an exponential function.
+
+$$\begin{align*} f(x) = \cfrac{1}{1 + e^{b(x-m)}} && \text{(logistic)}\\ f(x) = \cfrac{1}{1 + (bx^{m})} && \text{(exponential)} \end{align*} $$
+
+The full algorithm has been described in [Brinkmann et al. (2022)](https://doi.org/10.5194/agile-giss-3-27-2022).
+
+The `visualizeWeights` function helps to adjust spatial weight parameters *m* and *b* used in the `vgvi` and `vgvi_from_sf` functions.
+```{r echo=FALSE, fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
+library(ggplot2)
+library(ggpubr)
+
+theme_set(theme_bw())
+g1 <- CGEI::visualizeWeights(x = 300, m = 0.5, b = 8, plot_engine = "ggplot2", mode = "logit")
+g2 <- CGEI::visualizeWeights(x = 300, m = 1, b = 6, plot_engine = "ggplot2", mode = "exponential")
+
+ggarrange(g1, g2, nrow = 1)
+```
+
+*Example output of the* `visualizeWeight` *function to compare and parameterize the decay weights of a logistic (left) and an exponential (right) function.*
+
+#### 1. Single Point
+
+Calculate the viewshed for a 200 meters radius around the observers position at 1.7 meters height (eye level).
+```{r}
+# Generate single observer point
+observer <- st_sf(sf_point(c(492243.3, 5454231.4)), crs = st_crs(26910))
+vs <- viewshed_list(observer = observer, dsm_rast = DSM, dtm_rast = DEM, 
+                    max_distance = 200, observer_height = 1.7)
+```
+
+```{r echo=FALSE, fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
+graphics::par(mfrow=c(1,2))
+plot(crop(DSM, vs[[1]], mask = TRUE)); plot(observer, add = TRUE, pch = 19, col = "black")
+plot(vs[[1]]); plot(observer, add = TRUE, pch = 19, col = "black")
+graphics::par(mfrow=c(1,1))
+```
+
+*Left: Digital Surface Model (DSM); Right: Viewshed, where green = visible and yellow = no-visible area.*
+
+The VGVI can now be calculated using the `vgvi` function.
 ```{r message=FALSE, warning=FALSE}
-library(CGEI)
 vgvi_sf <- vgvi(observer = observer, 
                 dsm_rast = DSM, dtm_rast = DEM, greenspace_rast = GreenSpace, 
                 max_distance = 200, observer_height = 1.7)
 vgvi_sf$VGVI
 ```
+
 The output of \~0.61 indicates, that \~61% of the visible area, within a 200 meters radius, is covered by greenspace.
 
-### 2. Road Network
+#### 2. Road Network
 
 We also provide sample data of a SF LINESTRING feature, representing a road network. This feature represents roads and paths, that can be reached by walking within 5 minutes from our observer location.
-
 ```{r message=FALSE, warning=FALSE}
 # Download line feature and load as sf object
 isodistance <- read_sf("https://github.com/STBrinkmann/data/raw/main/GVI_Data/isoline.gpkg")
 ```
 
 Compute the VGVI along the line feature. As the resolution of our DSM is 5 meters, points along the line feature will be generated every 5 meters, too.
-
-```{r fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE}
 vgvi_sf <- vgvi(observer = isodistance, 
                 dsm_rast = DSM, dtm_rast = DEM, greenspace_rast = GreenSpace, 
                 max_distance = 200, observer_height = 1.7, 
                 m = 1, b = 3, mode = "exponential", cores = 12)
+```
 
-hist(vgvi_sf$VGVI)
+The plot below shows the VGVI along the line feature. Yellow has a high VGVI, while blue has a low VGVI. The VGVI is highest in parks and lowest in urban center in the east.
+```{r fig.height=4, fig.width=6, message=FALSE, warning=FALSE, echo=FALSE}
+slope <- terrain(DSM, "slope", unit="radians")
+aspect <- terrain(DSM, "aspect", unit="radians")
+hill <- shade(slope, aspect, 40, 270)
+
+plot(hill, col=grey(0:100/100), legend=FALSE, mar=c(2,2,1,4))
+plot(DSM, col=terrain.colors(100, alpha = 0.35), add=TRUE, legend=FALSE)
+plot(vgvi_sf, add=TRUE, pch=16, cex = 0.7, col="black")
+plot(vgvi_sf, add=TRUE, pch=16, cex = 0.5, col=hcl.colors(nrow(vgvi_sf), alpha = 0.8, rev = TRUE))
 ```
